Styling.  Mostly colors (generic and code highlight), tweaked some layout issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,8 +25,6 @@ body {
     font-kerning: normal;
 }
 
-
-
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
@@ -92,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 a {
     color: $brand-color;
-    text-decoration: none;
+    text-decoration: underline;
 
     &:visited {
         color: darken($brand-color, 15%);
@@ -100,7 +98,7 @@ a {
 
     &:hover {
         color: $text-color;
-        text-decoration: underline;
+        text-decoration: none;
     }
 }
 
@@ -132,7 +130,8 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
-    background-color: #eef;
+    background-color: #333;
+    color: #ddd;
 }
 
 code {
@@ -195,12 +194,12 @@ pre {
 
     > svg {
         display: inline-block;
-        width: 16px;
-        height: 16px;
+        width: 22px;
+        height: 22px;
         vertical-align: middle;
 
         path {
-            fill: $grey-color;
+            fill: black;
         }
     }
 }
